--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1,12 +1,470 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# U.S. Oil and Gas Production Analysis\n",
+    "\n",
+    "Analyzing the [Kaggle Dataset](https://www.kaggle.com/djzurawski/us-oil-and-gas-production-june-2008-to-june-2018) with information about Oil and Gas production in the US from June 2008 to June 2018."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:14:58.180638Z",
+     "iopub.status.busy": "2025-12-17T11:14:58.180028Z",
+     "iopub.status.idle": "2025-12-17T11:14:59.914508Z",
+     "shell.execute_reply": "2025-12-17T11:14:59.913304Z",
+     "shell.execute_reply.started": "2025-12-17T11:14:58.180612Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:15:58.473910Z",
+     "iopub.status.busy": "2025-12-17T11:15:58.472894Z",
+     "iopub.status.idle": "2025-12-17T11:15:58.520081Z",
+     "shell.execute_reply": "2025-12-17T11:15:58.518295Z",
+     "shell.execute_reply.started": "2025-12-17T11:15:58.473871Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>U.S.</th>\n",
+       "      <th>Alaska</th>\n",
+       "      <th>Arkansas</th>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Other States</th>\n",
+       "      <th>Federal Offshore--Gulf of Mexico</th>\n",
+       "      <th>Wyoming</th>\n",
+       "      <th>West Virginia</th>\n",
+       "      <th>Utah</th>\n",
+       "      <th>Pennsylvania</th>\n",
+       "      <th>Texas</th>\n",
+       "      <th>Oklahoma</th>\n",
+       "      <th>Ohio</th>\n",
+       "      <th>North Dakota</th>\n",
+       "      <th>New Mexico</th>\n",
+       "      <th>Montana</th>\n",
+       "      <th>Louisiana</th>\n",
+       "      <th>Colorado</th>\n",
+       "      <th>California</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2008-06-01</td>\n",
+       "      <td>70626</td>\n",
+       "      <td>8875</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>2995</td>\n",
+       "      <td>7339</td>\n",
+       "      <td>6839</td>\n",
+       "      <td>670</td>\n",
+       "      <td>1198</td>\n",
+       "      <td>540</td>\n",
+       "      <td>21446</td>\n",
+       "      <td>5241</td>\n",
+       "      <td>224</td>\n",
+       "      <td>243</td>\n",
+       "      <td>3975</td>\n",
+       "      <td>323</td>\n",
+       "      <td>3989</td>\n",
+       "      <td>3576</td>\n",
+       "      <td>932</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2008-07-01</td>\n",
+       "      <td>71137</td>\n",
+       "      <td>8375</td>\n",
+       "      <td>1256</td>\n",
+       "      <td>1034</td>\n",
+       "      <td>3150</td>\n",
+       "      <td>7468</td>\n",
+       "      <td>6940</td>\n",
+       "      <td>674</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>512</td>\n",
+       "      <td>21547</td>\n",
+       "      <td>5256</td>\n",
+       "      <td>220</td>\n",
+       "      <td>243</td>\n",
+       "      <td>4179</td>\n",
+       "      <td>324</td>\n",
+       "      <td>4008</td>\n",
+       "      <td>3834</td>\n",
+       "      <td>919</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008-08-01</td>\n",
+       "      <td>70760</td>\n",
+       "      <td>8739</td>\n",
+       "      <td>1313</td>\n",
+       "      <td>1033</td>\n",
+       "      <td>3092</td>\n",
+       "      <td>6868</td>\n",
+       "      <td>6835</td>\n",
+       "      <td>678</td>\n",
+       "      <td>1277</td>\n",
+       "      <td>529</td>\n",
+       "      <td>21777</td>\n",
+       "      <td>4896</td>\n",
+       "      <td>220</td>\n",
+       "      <td>249</td>\n",
+       "      <td>4092</td>\n",
+       "      <td>327</td>\n",
+       "      <td>3896</td>\n",
+       "      <td>4056</td>\n",
+       "      <td>881</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Month   U.S.  Alaska  Arkansas  Kansas  Other States  \\\n",
+       "0  2008-06-01  70626    8875      1196    1024          2995   \n",
+       "1  2008-07-01  71137    8375      1256    1034          3150   \n",
+       "2  2008-08-01  70760    8739      1313    1033          3092   \n",
+       "\n",
+       "   Federal Offshore--Gulf of Mexico  Wyoming  West Virginia  Utah  \\\n",
+       "0                              7339     6839            670  1198   \n",
+       "1                              7468     6940            674  1200   \n",
+       "2                              6868     6835            678  1277   \n",
+       "\n",
+       "   Pennsylvania  Texas  Oklahoma  Ohio  North Dakota  New Mexico  Montana  \\\n",
+       "0           540  21446      5241   224           243        3975      323   \n",
+       "1           512  21547      5256   220           243        4179      324   \n",
+       "2           529  21777      4896   220           249        4092      327   \n",
+       "\n",
+       "   Louisiana  Colorado  California  \n",
+       "0       3989      3576         932  \n",
+       "1       4008      3834         919  \n",
+       "2       3896      4056         881  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(121, 20)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 121 entries, 0 to 120\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                            Non-Null Count  Dtype \n",
+      "---  ------                            --------------  ----- \n",
+      " 0   Month                             121 non-null    object\n",
+      " 1   U.S.                              121 non-null    int64 \n",
+      " 2   Alaska                            121 non-null    int64 \n",
+      " 3   Arkansas                          121 non-null    int64 \n",
+      " 4   Kansas                            121 non-null    int64 \n",
+      " 5   Other States                      121 non-null    int64 \n",
+      " 6   Federal Offshore--Gulf of Mexico  121 non-null    int64 \n",
+      " 7   Wyoming                           121 non-null    int64 \n",
+      " 8   West Virginia                     121 non-null    int64 \n",
+      " 9   Utah                              121 non-null    int64 \n",
+      " 10  Pennsylvania                      121 non-null    int64 \n",
+      " 11  Texas                             121 non-null    int64 \n",
+      " 12  Oklahoma                          121 non-null    int64 \n",
+      " 13  Ohio                              121 non-null    int64 \n",
+      " 14  North Dakota                      121 non-null    int64 \n",
+      " 15  New Mexico                        121 non-null    int64 \n",
+      " 16  Montana                           121 non-null    int64 \n",
+      " 17  Louisiana                         121 non-null    int64 \n",
+      " 18  Colorado                          121 non-null    int64 \n",
+      " 19  California                        121 non-null    int64 \n",
+      "dtypes: int64(19), object(1)\n",
+      "memory usage: 19.0+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = \"data/U.S._natural_gas_production.csv\"\n",
+    "gas_df = pd.read_csv(file, decimal=\",\")\n",
+    "\n",
+    "# İlk 3 satır\n",
+    "display(gas_df.head(3))\n",
+    "\n",
+    "# Boyut\n",
+    "print(gas_df.shape)\n",
+    "\n",
+    "# Sütun tipleri\n",
+    "print(gas_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:22:57.195621Z",
+     "iopub.status.busy": "2025-12-17T11:22:57.194530Z",
+     "iopub.status.idle": "2025-12-17T11:22:57.219924Z",
+     "shell.execute_reply": "2025-12-17T11:22:57.218314Z",
+     "shell.execute_reply.started": "2025-12-17T11:22:57.195581Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     2008-06-01\n",
+      "1     2008-07-01\n",
+      "2     2008-08-01\n",
+      "3     2008-09-01\n",
+      "4     2008-10-01\n",
+      "         ...    \n",
+      "116   2018-02-01\n",
+      "117   2018-03-01\n",
+      "118   2018-04-01\n",
+      "119   2018-05-01\n",
+      "120   2018-06-01\n",
+      "Name: Month, Length: 121, dtype: datetime64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gas_df[\"Month\"] = pd.to_datetime(gas_df[\"Month\"], format = \"%Y-%m-%d\")\n",
+    "print(gas_df[\"Month\"])\n",
+    "                                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:23:15.656757Z",
+     "iopub.status.busy": "2025-12-17T11:23:15.655697Z",
+     "iopub.status.idle": "2025-12-17T11:23:15.685132Z",
+     "shell.execute_reply": "2025-12-17T11:23:15.682523Z",
+     "shell.execute_reply.started": "2025-12-17T11:23:15.656721Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 121 entries, 0 to 120\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column                            Non-Null Count  Dtype         \n",
+      "---  ------                            --------------  -----         \n",
+      " 0   Month                             121 non-null    datetime64[ns]\n",
+      " 1   U.S.                              121 non-null    int64         \n",
+      " 2   Alaska                            121 non-null    int64         \n",
+      " 3   Arkansas                          121 non-null    int64         \n",
+      " 4   Kansas                            121 non-null    int64         \n",
+      " 5   Other States                      121 non-null    int64         \n",
+      " 6   Federal Offshore--Gulf of Mexico  121 non-null    int64         \n",
+      " 7   Wyoming                           121 non-null    int64         \n",
+      " 8   West Virginia                     121 non-null    int64         \n",
+      " 9   Utah                              121 non-null    int64         \n",
+      " 10  Pennsylvania                      121 non-null    int64         \n",
+      " 11  Texas                             121 non-null    int64         \n",
+      " 12  Oklahoma                          121 non-null    int64         \n",
+      " 13  Ohio                              121 non-null    int64         \n",
+      " 14  North Dakota                      121 non-null    int64         \n",
+      " 15  New Mexico                        121 non-null    int64         \n",
+      " 16  Montana                           121 non-null    int64         \n",
+      " 17  Louisiana                         121 non-null    int64         \n",
+      " 18  Colorado                          121 non-null    int64         \n",
+      " 19  California                        121 non-null    int64         \n",
+      "dtypes: datetime64[ns](1), int64(19)\n",
+      "memory usage: 19.0 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "gas_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check your code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:24:05.163231Z",
+     "iopub.status.busy": "2025-12-17T11:24:05.162514Z",
+     "iopub.status.idle": "2025-12-17T11:24:05.170677Z",
+     "shell.execute_reply": "2025-12-17T11:24:05.169014Z",
+     "shell.execute_reply.started": "2025-12-17T11:24:05.163203Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "month_type = gas_df['Month'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:24:57.908715Z",
+     "iopub.status.busy": "2025-12-17T11:24:57.908227Z",
+     "iopub.status.idle": "2025-12-17T11:24:58.952667Z",
+     "shell.execute_reply": "2025-12-17T11:24:58.951180Z",
+     "shell.execute_reply.started": "2025-12-17T11:24:57.908687Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.12.9, pytest-8.3.4, pluggy-1.5.0 -- /home/ataka/.pyenv/versions/3.12.9/envs/workintech/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/ataka/data-us-oil-and-gas-production/tests\n",
+      "plugins: anyio-4.8.0, typeguard-4.4.2\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 1 item\n",
+      "\n",
+      "test_date.py::TestDate::test_month_column_is_a_datetime \u001b[32mPASSED\u001b[0m\u001b[32m           [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.26s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\n",
+      "\n",
+      "💯 You can commit your code:\n",
+      "\n",
+      "\u001b[1;32mgit\u001b[39m add tests/date.pickle\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed date step'\u001b[39m\n",
+      "\n",
+      "\u001b[32mgit\u001b[39m push origin master\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nbresult import ChallengeResult\n",
+    "\n",
+    "result = ChallengeResult('date',\n",
+    "    month_type=month_type,\n",
+    ")\n",
+    "result.write()\n",
+    "print(result.check())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:25:48.763919Z",
+     "iopub.status.busy": "2025-12-17T11:25:48.763284Z",
+     "iopub.status.idle": "2025-12-17T11:25:55.558717Z",
+     "shell.execute_reply": "2025-12-17T11:25:55.556902Z",
+     "shell.execute_reply.started": "2025-12-17T11:25:48.763887Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 1 commit.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   oil_and_gas.ipynb\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n",
+      "Enumerating objects: 6, done.\n",
+      "Counting objects: 100% (6/6), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 474 bytes | 474.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To https://github.com/atakancansuit/data-us-oil-and-gas-production.git\n",
+      "   306b06b..b820ba2  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add tests/date.pickle\n",
+    "\n",
+    "!git commit -m 'Completed date step'\n",
+    "\n",
+    "!git push origin main"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
