Completed date step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -400,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:25:48.763919Z",
-     "iopub.status.busy": "2025-12-17T11:25:48.763284Z",
-     "iopub.status.idle": "2025-12-17T11:25:55.558717Z",
-     "shell.execute_reply": "2025-12-17T11:25:55.556902Z",
-     "shell.execute_reply.started": "2025-12-17T11:25:48.763887Z"
+     "iopub.execute_input": "2025-12-17T11:28:57.716172Z",
+     "iopub.status.busy": "2025-12-17T11:28:57.715560Z",
+     "iopub.status.idle": "2025-12-17T11:30:05.787560Z",
+     "shell.execute_reply": "2025-12-17T11:30:05.785412Z",
+     "shell.execute_reply.started": "2025-12-17T11:28:57.716142Z"
     }
    },
    "outputs": [
@@ -415,30 +415,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 1 commit.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   oil_and_gas.ipynb\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n",
-      "Enumerating objects: 6, done.\n",
-      "Counting objects: 100% (6/6), done.\n",
+      "[main 1741be7] Completed date step\n",
+      " 1 file changed, 461 insertions(+), 3 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 474 bytes | 474.00 KiB/s, done.\n",
-      "Total 4 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 3.80 KiB | 3.80 MiB/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
       "To https://github.com/atakancansuit/data-us-oil-and-gas-production.git\n",
-      "   306b06b..b820ba2  main -> main\n"
+      "   b820ba2..1741be7  main -> main\n"
      ]
     }
    ],
    "source": [
-    "!git add tests/date.pickle\n",
+    "!git add .\n",
     "\n",
     "!git commit -m 'Completed date step'\n",
     "\n",
