--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -400,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:28:57.716172Z",
-     "iopub.status.busy": "2025-12-17T11:28:57.715560Z",
-     "iopub.status.idle": "2025-12-17T11:30:05.787560Z",
-     "shell.execute_reply": "2025-12-17T11:30:05.785412Z",
-     "shell.execute_reply.started": "2025-12-17T11:28:57.716142Z"
+     "iopub.execute_input": "2025-12-17T11:30:48.650227Z",
+     "iopub.status.busy": "2025-12-17T11:30:48.648757Z",
+     "iopub.status.idle": "2025-12-17T11:32:06.086513Z",
+     "shell.execute_reply": "2025-12-17T11:32:06.084516Z",
+     "shell.execute_reply.started": "2025-12-17T11:30:48.650159Z"
     }
    },
    "outputs": [
@@ -415,17 +415,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 1741be7] Completed date step\n",
-      " 1 file changed, 461 insertions(+), 3 deletions(-)\n",
+      "[main 5993202] Completed date step\n",
+      " 1 file changed, 16 insertions(+), 24 deletions(-)\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 3.80 KiB | 3.80 MiB/s, done.\n",
-      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "Writing objects: 100% (3/3), 582 bytes | 582.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/atakancansuit/data-us-oil-and-gas-production.git\n",
-      "   b820ba2..1741be7  main -> main\n"
+      "   1741be7..5993202  main -> main\n"
      ]
     }
    ],
