Completed date step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -399,8 +399,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-12-17T11:30:48.650227Z",
@@ -410,22 +409,26 @@
      "shell.execute_reply.started": "2025-12-17T11:30:48.650159Z"
     }
    },
+   "source": [
+    "Github'a pushlama\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T11:34:10.579746Z",
+     "iopub.status.busy": "2025-12-17T11:34:10.577505Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 5993202] Completed date step\n",
-      " 1 file changed, 16 insertions(+), 24 deletions(-)\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
-      "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 582 bytes | 582.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
-      "To https://github.com/atakancansuit/data-us-oil-and-gas-production.git\n",
-      "   1741be7..5993202  main -> main\n"
+      "[main 884f59e] Completed date step\n",
+      " 1 file changed, 12 insertions(+), 12 deletions(-)\n"
      ]
     }
    ],
@@ -436,6 +439,13 @@
     "\n",
     "!git push origin main"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
