Completed date step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -431,7 +431,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# yıllar\n",
+    "display(gas_df['Month'].dt.year.head())\n",
+    "\n",
+    "# aylar\n",
+    "display(gas_df['Month'].dt.month.tail())"
+   ]
   }
  ],
  "metadata": {
