Tum calismalar tamamlandi

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:14:58.180638Z",
-     "iopub.status.busy": "2025-12-17T11:14:58.180028Z",
-     "iopub.status.idle": "2025-12-17T11:14:59.914508Z",
-     "shell.execute_reply": "2025-12-17T11:14:59.913304Z",
-     "shell.execute_reply.started": "2025-12-17T11:14:58.180612Z"
+     "iopub.execute_input": "2025-12-17T11:41:35.454490Z",
+     "iopub.status.busy": "2025-12-17T11:41:35.453082Z",
+     "iopub.status.idle": "2025-12-17T11:41:35.461060Z",
+     "shell.execute_reply": "2025-12-17T11:41:35.459500Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:35.454458Z"
     }
    },
    "outputs": [],
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:15:58.473910Z",
-     "iopub.status.busy": "2025-12-17T11:15:58.472894Z",
-     "iopub.status.idle": "2025-12-17T11:15:58.520081Z",
-     "shell.execute_reply": "2025-12-17T11:15:58.518295Z",
-     "shell.execute_reply.started": "2025-12-17T11:15:58.473871Z"
+     "iopub.execute_input": "2025-12-17T11:41:35.910905Z",
+     "iopub.status.busy": "2025-12-17T11:41:35.909541Z",
+     "iopub.status.idle": "2025-12-17T11:41:35.947898Z",
+     "shell.execute_reply": "2025-12-17T11:41:35.946439Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:35.910855Z"
     },
     "scrolled": true
    },
@@ -236,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:22:57.195621Z",
-     "iopub.status.busy": "2025-12-17T11:22:57.194530Z",
-     "iopub.status.idle": "2025-12-17T11:22:57.219924Z",
-     "shell.execute_reply": "2025-12-17T11:22:57.218314Z",
-     "shell.execute_reply.started": "2025-12-17T11:22:57.195581Z"
+     "iopub.execute_input": "2025-12-17T11:41:36.063041Z",
+     "iopub.status.busy": "2025-12-17T11:41:36.062689Z",
+     "iopub.status.idle": "2025-12-17T11:41:36.073823Z",
+     "shell.execute_reply": "2025-12-17T11:41:36.072533Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:36.063017Z"
     }
    },
    "outputs": [
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:23:15.656757Z",
-     "iopub.status.busy": "2025-12-17T11:23:15.655697Z",
-     "iopub.status.idle": "2025-12-17T11:23:15.685132Z",
-     "shell.execute_reply": "2025-12-17T11:23:15.682523Z",
-     "shell.execute_reply.started": "2025-12-17T11:23:15.656721Z"
+     "iopub.execute_input": "2025-12-17T11:41:36.208425Z",
+     "iopub.status.busy": "2025-12-17T11:41:36.207561Z",
+     "iopub.status.idle": "2025-12-17T11:41:36.222584Z",
+     "shell.execute_reply": "2025-12-17T11:41:36.221132Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:36.208394Z"
     }
    },
    "outputs": [
@@ -332,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:24:05.163231Z",
-     "iopub.status.busy": "2025-12-17T11:24:05.162514Z",
-     "iopub.status.idle": "2025-12-17T11:24:05.170677Z",
-     "shell.execute_reply": "2025-12-17T11:24:05.169014Z",
-     "shell.execute_reply.started": "2025-12-17T11:24:05.163203Z"
+     "iopub.execute_input": "2025-12-17T11:41:36.524138Z",
+     "iopub.status.busy": "2025-12-17T11:41:36.523500Z",
+     "iopub.status.idle": "2025-12-17T11:41:36.530444Z",
+     "shell.execute_reply": "2025-12-17T11:41:36.528743Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:36.524111Z"
     }
    },
    "outputs": [],
@@ -349,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:24:57.908715Z",
-     "iopub.status.busy": "2025-12-17T11:24:57.908227Z",
-     "iopub.status.idle": "2025-12-17T11:24:58.952667Z",
-     "shell.execute_reply": "2025-12-17T11:24:58.951180Z",
-     "shell.execute_reply.started": "2025-12-17T11:24:57.908687Z"
+     "iopub.execute_input": "2025-12-17T11:41:36.668523Z",
+     "iopub.status.busy": "2025-12-17T11:41:36.667778Z",
+     "iopub.status.idle": "2025-12-17T11:41:37.508984Z",
+     "shell.execute_reply": "2025-12-17T11:41:37.507081Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:36.668487Z"
     }
    },
    "outputs": [
@@ -374,7 +374,7 @@
       "\n",
       "test_date.py::TestDate::test_month_column_is_a_datetime \u001b[32mPASSED\u001b[0m\u001b[32m           [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.26s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
+      "\u001b[32m============================== \u001b[32m\u001b[1m1 passed\u001b[0m\u001b[32m in 0.17s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
       "\n",
       "\n",
       "💯 You can commit your code:\n",
@@ -399,38 +399,47 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-17T11:30:48.650227Z",
-     "iopub.status.busy": "2025-12-17T11:30:48.648757Z",
-     "iopub.status.idle": "2025-12-17T11:32:06.086513Z",
-     "shell.execute_reply": "2025-12-17T11:32:06.084516Z",
-     "shell.execute_reply.started": "2025-12-17T11:30:48.650159Z"
+     "iopub.execute_input": "2025-12-17T11:41:37.511824Z",
+     "iopub.status.busy": "2025-12-17T11:41:37.511053Z",
+     "iopub.status.idle": "2025-12-17T11:41:37.525619Z",
+     "shell.execute_reply": "2025-12-17T11:41:37.524203Z",
+     "shell.execute_reply.started": "2025-12-17T11:41:37.511798Z"
     }
    },
-   "source": [
-    "Github'a pushlama\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git add .\n",
-    "\n",
-    "!git commit -m 'Completed date step'\n",
-    "\n",
-    "!git push origin main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2008\n",
+       "1    2008\n",
+       "2    2008\n",
+       "3    2008\n",
+       "4    2008\n",
+       "Name: Month, dtype: int32"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "116    2\n",
+       "117    3\n",
+       "118    4\n",
+       "119    5\n",
+       "120    6\n",
+       "Name: Month, dtype: int32"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# yıllar\n",
     "display(gas_df['Month'].dt.year.head())\n",
