Completed filtered_gas step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1363,15 +1363,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T12:05:08.630451Z",
+     "iopub.status.busy": "2025-12-17T12:05:08.629389Z",
+     "iopub.status.idle": "2025-12-17T12:05:10.549451Z",
+     "shell.execute_reply": "2025-12-17T12:05:10.547946Z",
+     "shell.execute_reply.started": "2025-12-17T12:05:08.630413Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main e5cd754] Completed filtered_gas step\n",
+      " 2 files changed, 496 insertions(+), 60 deletions(-)\n",
+      " create mode 100644 tests/filtered_gas.pickle\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
+      "Delta compression using up to 12 threads\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 11.72 KiB | 3.91 MiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "To https://github.com/atakancansuit/data-us-oil-and-gas-production.git\n",
+      "   05ddc6b..e5cd754  main -> main\n"
+     ]
+    }
+   ],
    "source": [
-    "git add tests/filtered_gas.pickle\n",
+    "!git add .\n",
     "\n",
-    "git commit -m 'Completed filtered_gas step'\n",
+    "!git commit -m 'Completed filtered_gas step'\n",
     "\n",
-    "git push origin master"
+    "!git push origin main"
    ]
   }
  ],
