Completed merged_dataframes step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -2044,11 +2044,130 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Merging Oil and Gas Production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-17T12:29:00.719883Z",
+     "iopub.status.busy": "2025-12-17T12:29:00.719471Z",
+     "iopub.status.idle": "2025-12-17T12:29:00.730956Z",
+     "shell.execute_reply": "2025-12-17T12:29:00.730055Z",
+     "shell.execute_reply.started": "2025-12-17T12:29:00.719865Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gas</th>\n",
+       "      <th>Oil</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>856876</td>\n",
+       "      <td>64180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>881622</td>\n",
+       "      <td>65741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>936163</td>\n",
+       "      <td>67829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012</th>\n",
+       "      <td>968632</td>\n",
+       "      <td>78007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013</th>\n",
+       "      <td>970617</td>\n",
+       "      <td>89585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014</th>\n",
+       "      <td>1032439</td>\n",
+       "      <td>105064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>1082158</td>\n",
+       "      <td>113179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>1070085</td>\n",
+       "      <td>105970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>1090730</td>\n",
+       "      <td>112205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Gas     Oil\n",
+       "Month                 \n",
+       "2009    856876   64180\n",
+       "2010    881622   65741\n",
+       "2011    936163   67829\n",
+       "2012    968632   78007\n",
+       "2013    970617   89585\n",
+       "2014   1032439  105064\n",
+       "2015   1082158  113179\n",
+       "2016   1070085  105970\n",
+       "2017   1090730  112205"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "total_gas = filtered_yearly_gas_df[[\"U.S.\"]].rename(columns={\"U.S.\":\"Gas\"})\n",
+    "total_oil = filtered_yearly_oil_df[[\"U.S. Crude Oil\"]].rename(columns={\"U.S. Crude Oil\":\"Oil\"})\n",
+    "merged_df = pd.concat([total_gas, total_oil], axis=1)\n",
+    "display(merged_df.head(17))\n",
+    "                                                    "
+   ]
   }
  ],
  "metadata": {
